--- a/src/components/Result/Result.module.css
+++ b/src/components/Result/Result.module.css
@@ -62,7 +62,7 @@
   
   .back__text::after {
       content: "";
-      background-image: url('../../assets/img/button__line.png');
+      background-image: url('/assets/img/button__line.png');
       width: 30vw;
       height: 15vh;
       background-position: 13rem 1.5rem;
@@ -93,7 +93,7 @@
   
   .next__text::after {
       content: "";
-      background-image: url('../../assets/img/button__line.png');
+      background-image: url('/assets/img/button__line.png');
       width: 30vw;
       height: 15vh;
       background-position: 13rem 1.5rem;
