--- a/src/components/Message/Message.module.css
+++ b/src/components/Message/Message.module.css
@@ -30,7 +30,7 @@
 
 .left::before {
   content: "";
-  background-image: url(../../assets/img/user_icon.png);
+  background-image: url('/assets/img/user_icon.png');
   width: 3.2rem;
   height: 3.2rem;
   background-position: 1rem 2rem;
