--- a/src/components/Pimp/Pimp.module.css
+++ b/src/components/Pimp/Pimp.module.css
@@ -56,7 +56,7 @@
 }
 
 .capture {
-  background-image: url('../../assets/img/start.png');
+  background-image: url('/assets/img/start.png');
   margin: -2rem auto;
     display: flex;
     align-items: center;
@@ -89,7 +89,7 @@
   flex-flow: column;
   align-items: center;
   justify-content: center;
-  background-image: url('../../assets/img/procesbar_active.png');
+  background-image: url('/assets/img/procesbar_active.png');
   background-repeat: no-repeat; 
   height: 8.7rem;
   width: 7.5rem;
@@ -112,7 +112,7 @@
 }
 
 .procesbar_lijn1::after {
-  content: url('../../assets/img/procesbar_lijn1.png');
+  content: url('/assets/img/procesbar_lijn1.png');
   width: 9rem;
   margin-left: 2rem;
   margin-right: 2rem;
@@ -124,7 +124,7 @@
 }
 
 .procesbar_lijn2::after {
-  content: url('../../assets/img/procesbar_lijn2.png');
+  content: url('/assets/img/procesbar_lijn2.png');
   width: 9rem;
   margin-left: 2rem;
   margin-right: 2rem;
@@ -135,7 +135,7 @@
 }
 
 .procesbar_lijn3::after {
-  content: url('../../assets/img/procesbar_lijn3.png');
+  content: url('/assets/img/procesbar_lijn3.png');
   width: 9rem;
   margin-left: 2rem;
   margin-right: 2rem;
@@ -147,7 +147,7 @@
 }
 
 .procesbar_lijn4::after {
-  content: url('../../assets/img/procesbar_lijn4.png');
+  content: url('/assets/img/procesbar_lijn4.png');
   width: 9rem;
   margin-left: 2rem;
   margin-right: 2rem;
@@ -190,7 +190,7 @@
 
 .next__text::after {
     content: "";
-    background-image: url('../../assets/img/button__line.png');
+    background-image: url('/assets/img/button__line.png');
     width: 30vw;
     height: 15vh;
     background-position: 13rem 1.5rem;
@@ -212,7 +212,7 @@
 
 .back__text::after {
     content: "";
-    background-image: url('../../assets/img/button__circle.png');
+    background-image: url('/assets/img/button__circle.png');
     width: 15vw;
     height: 15vh;
     background-position: 11rem 3.5rem;
