--- a/src/components/Result/Result.module.css
+++ b/src/components/Result/Result.module.css
@@ -9,6 +9,10 @@
     justify-content: center;
   }
 
+  .hidden {
+    display: none;
+  }
+
   .subtitle {
     composes: regular from "../../styles/typo.module.css";
     font-size: 3rem;
